--- a/lib/live_app_web/templates/layout/app.html.eex
+++ b/lib/live_app_web/templates/layout/app.html.eex
@@ -2,22 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
+    <%= csrf_meta_tag() %>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>LiveApp · Phoenix Framework</title>
+    <title>LiveApp</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
+        <nav class="navigation" role="navigation">
+          <li><%= link "Lead Intake", to: Routes.live_path(@conn, LiveAppWeb.Lead.NewLive) %></li>
+          <li><%= link "Lead Management", to: Routes.live_path(@conn, LiveAppWeb.Lead.IndexLive) %></li>
         </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
       </section>
     </header>
     <main role="main" class="container">
